--- a/instagram.html
+++ b/instagram.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div id="target2">
-				<button class="btn" style="margin-top: 20px!important; width:100%; height:48px; font-size: 30px; font-weight: bold;" onclick="getInstagramObjects()">
+				<button id="moreButton" class="btn" style="margin-top: 20px!important; width:100%; height:48px; font-size: 30px; font-weight: bold;" onclick="getInstagramObjects()">
 					More
 				</button>
 			</div>
